<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView style="@style/tv_standard_linear_layout"
            android:id="@+id/tv_hint_match_number"
            android:text="@string/tv_match_number_input"/>

        <EditText style="@style/et_standard_linear_layout_number"
            android:id="@+id/et_match_number"
            android:maxLength="3"/>

    </LinearLayout>

    <View style="@style/view_separator_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView style="@style/tv_standard_linear_layout"
            android:id="@+id/tv_hint_team_one"
            android:text="@string/tv_team_number_input_one"/>

        <EditText style="@style/et_standard_linear_layout_number"
            android:id="@+id/et_team_one"
            android:maxLength="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <View style="@style/view_separator_horizontal"
            android:id="@+id/separator_team_one_two"
            android:visibility="invisible" />

        <TextView style="@style/tv_standard_linear_layout"
            android:id="@+id/tv_hint_team_two"
            android:visibility="invisible"
            android:text="@string/tv_team_number_input_two"/>

        <EditText style="@style/et_standard_linear_layout_number"
            android:id="@+id/et_team_two"
            android:maxLength="4"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <View style="@style/view_separator_horizontal"
            android:id="@+id/separator_team_two_three"
            android:visibility="invisible" />

        <TextView style="@style/tv_standard_linear_layout"
            android:id="@+id/tv_hint_team_three"
            android:visibility="invisible"
            android:text="@string/tv_team_number_input_three"/>

        <EditText style="@style/et_standard_linear_layout_number"
            android:id="@+id/et_team_three"
            android:maxLength="4"
            android:visibility="invisible"/>

    </LinearLayout>

    <View style="@style/view_separator_horizontal"
        android:id="@+id/separator_team_num_spinner"/>

    <Spinner style="@style/btn_white"
        android:id="@+id/spinner_scout_name"/>

    <View style="@style/view_separator_horizontal"
        android:layout_height="10dp"/>

    <Button style="@style/btn_white"
        android:id="@+id/btn_proceed_qr_generate"
        android:text="@string/btn_proceed"/>
</LinearLayout>